plugins/scripting/scripting-tests/testData/diagnostics/repl/cast_assignment.repl.kts
// SNIPPET

var x: Int? = null
x = 1
val y: Int <!INITIALIZER_TYPE_MISMATCH!>=<!> x
